--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@ navbar_title: Services
 container_class: container-xl
 ---
 
-{% assign cards_by_group = site.showcase | sort: "date" | reverse | where: "show", true | group_by_exp: "item", "item.group" %}
+{% assign cards_by_group = site.services | sort: "date" | reverse | where: "show", true | group_by_exp: "item", "item.group" %}
 
 {% for group in cards_by_group %}
 <h1>{{ group.name }}</h1>
